--- a/style.css
+++ b/style.css
@@ -5,3 +5,33 @@
 #search-col {
   margin-top: 20px;
 }
+
+.popup-overlay {
+  visibility:hidden;
+  }
+  
+  .popup-content {
+  visibility:hidden;
+  }
+
+  .popup-overlay.active{
+    visibility:visible;
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+    }
+    
+    .popup-content.active {
+    visibility:visible;
+      background-color:lightblue;
+      margin: 15% auto; /* 15% from the top and centered */
+      padding: 20px;
+      border: 1px solid #888;
+      width: 30%; /* Could be more or less, depending on screen size */
+    }
