--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ body {
 
 #main-title {
   color: white;
-  font-family: 'Dancing Script', cursive;
+  font-family: "Dancing Script", cursive;
   font-size: 50px;
   margin-top: 10px;
 }
@@ -37,15 +37,14 @@ body {
 }
 
 .popup-overlay {
-  visibility:hidden;
-  }
-  
-  .popup-content {
-  visibility:hidden;
-  }
+  visibility: hidden;
+}
 
-  
-  .popup-content.active {
+.popup-content {
+  visibility: hidden;
+}
+
+.popup-content.active {
   position: fixed;
   z-index: 1;
   visibility: visible;
@@ -55,4 +54,22 @@ body {
   padding: 20px;
   border: 15px solid #888;
   background-color: darkslategrey;
+}
+
+#makeup-img {
+  max-width: 500px;
+  height: auto;
+  margin: 0 auto;
+  margin-top: 30px;
+  margin-bottom: 30px;
+  display: block;
+  border: 4px solid white;
+  padding: 20px;
+}
+
+@media only screen and (max-width: 600px) {
+  #makeup-img {
+    max-width: 300px;
+    height: auto;
   }
+}
