--- a/style.css
+++ b/style.css
@@ -78,7 +78,9 @@ body {
   border: 4px solid white;
   padding: 20px;
 }
-
+#results-col {
+  margin: 0 auto;
+}
 @media only screen and (max-width: 600px) {
   #makeup-img {
     max-width: 300px;
