--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+/* General Element Styling */
 body {
   background-color: black;
 }
@@ -17,11 +18,31 @@ body {
   margin-top: 20px;
 }
 
-#makeup-types {
+.product{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+/* Buttons */
+#searchButton {
   color: white;
   background-color: black;
-  border-color: darkslategray;
-  border-width: thick;
+  border-color: white;
+  border-width: 3px;
+  height: 40px;
+  width: 50px;
+  padding: 9px;
+}
+
+#searchButton:hover {
+  background-color: black;
+  color: white;
+  border-color: green;
+}
+
+#searchButton:focus {
+  border-color: green;
 }
 
 .filter-btn {
@@ -32,23 +53,40 @@ body {
   margin: 20px 5px 0px 0px;
 }
 
+
 .filter-btn:hover {
+  background-color: black;
   color: white;
   border-color: red;
 }
 
-.filter-btn:active{
+.filter-btn:focus{
+  background-color: black;
   border-color: red;
 }
 
-.product{
-  display: flex;
-  justify-content: center;
-  align-items: center;
+.type-btn {
+  color: white;
+  background-color: black;
+  border-color: white;
+  border-width: thick;
+  margin: 20px 5px 0px 0px;
 }
 
-.popup-overlay {
+.type-btn:hover {
+  background-color: black;
+  color: white;
+  border-color: blue;
+}
 
+.type-btn:focus{
+  background-color: black;
+  border-color: blue;
+}
+
+
+/* Modal Styles */
+.popup-overlay {
   visibility:hidden;
 }
   
@@ -58,16 +96,20 @@ body {
 
 .popup-content.active {
   position: fixed;
-  z-index: 1;
   visibility: visible;
+  z-index: 9999;
   height: 500px;
-  width: 300px;
-  margin-left: 35px;
+  width: 500px;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
   padding: 20px;
-  border: 15px solid #888;
-  background-color: darkslategrey;
+  border: 15px solid red;
+  background-color: black;
 }
 
+
+/* Title Image */
 #makeup-img {
   max-width: 500px;
   height: auto;
@@ -84,4 +126,9 @@ body {
     max-width: 300px;
     height: auto;
   }
+
+  .popup-content.active {
+    height: 375px;
+    width: 375px;
+    
 }
