--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+/* General Element Styling */
 body {
   background-color: black;
 }
@@ -17,38 +18,77 @@ body {
   margin-top: 20px;
 }
 
-#makeup-types {
+.product{
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
+
+/* Buttons */
+#searchButton {
   color: white;
   background-color: black;
-  border-color: darkslategray;
-  border-width: thick;
+  border-color: white;
+  border-width: 3px;
+  height: 40px;
+  width: 50px;
+  padding: 9px;
+}
+
+#searchButton:hover {
+  background-color: black;
+  color: white;
+  border-color: green;
+}
+
+#searchButton:focus {
+  border-color: green;
 }
 
 .filter-btn {
   color: white;
   background-color: black;
   border-color: white;
-  border-width: thick;
+  border-width: 2px;
   margin: 20px 5px 0px 0px;
+  width: 130px;
 }
 
+
 .filter-btn:hover {
+  background-color: black;
   color: white;
   border-color: red;
 }
 
-.filter-btn:active{
+.filter-btn:focus{
+  background-color: black;
   border-color: red;
 }
 
-.product{
-  display: flex;
-  justify-content: center;
-  align-items: center;
+.type-btn {
+  color: white;
+  background-color: black;
+  border-color: white;
+  border-width: 2px;
+  margin: 20px 5px 0px 0px;
+  width: 105px;
 }
 
-.popup-overlay {
+.type-btn:hover {
+  background-color: black;
+  color: white;
+  border-color: blue;
+}
 
+.type-btn:focus{
+  background-color: black;
+  border-color: blue;
+}
+
+
+/* Modal Styles */
+.popup-overlay {
   visibility:hidden;
 }
   
@@ -58,16 +98,39 @@ body {
 
 .popup-content.active {
   position: fixed;
-  z-index: 1;
   visibility: visible;
+  z-index: 9999;
   height: 500px;
-  width: 300px;
-  margin-left: 35px;
+  width: 500px;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
   padding: 20px;
-  border: 15px solid #888;
-  background-color: darkslategrey;
+  border: 15px solid red;
+  background-color: black;
 }
 
+.makeup-swoosh {
+  position: fixed;
+  top: 0;
+  right: 440px;
+  text-align: center;
+  transform: rotate(-38deg);
+  z-index: -1;
+}
+
+.makeup-stroke-img {
+  margin: auto;
+  text-align: center;
+}
+
+.makeup-stroke{
+  text-align: center;
+  margin-top: 60px;
+  margin-bottom: 60px;
+}
+
+/* Title Image */
 #makeup-img {
   max-width: 500px;
   height: auto;
@@ -78,10 +141,17 @@ body {
   border: 4px solid white;
   padding: 20px;
 }
-
+#results-col {
+  margin: 0 auto;
+}
 @media only screen and (max-width: 600px) {
   #makeup-img {
     max-width: 300px;
     height: auto;
   }
+
+  .popup-content.active {
+    height: 375px;
+    width: 375px;
+    
 }
