--- a/style.css
+++ b/style.css
@@ -10,6 +10,15 @@ body {
   margin-top: 50px;
 }
 
+#tagline{
+  font-family: 'Cormorant Garamond', serif;
+  color: white;
+  font-size: 24px;
+  margin-top: 1%;
+  margin-bottom: 1%;
+  text-align: center;
+}
+
 .navbar-brand {
   margin: 0 auto;
 }
