--- a/style.css
+++ b/style.css
@@ -33,6 +33,19 @@ body {
   text-align: center;
 }
 
+.input-group.mb-3 {
+  font-family: "Cormorant Garamond", serif;
+}
+
+.search-tagline {
+  font-family: "Cormorant Garamond", serif;
+  color: white;
+  font-size: 24px;
+  margin-top: 1%;
+  margin-bottom: 1%;
+  text-align: center;
+}
+
 /* Buttons */
 #searchButton {
   color: white;
@@ -45,13 +58,24 @@ body {
 }
 
 #searchButton:hover {
-  background-color: black;
-  color: white;
-  border-color: green;
+  background-image: linear-gradient(
+    to right,
+    #e09590 0%,
+    #f7bb97 51%,
+    #fccbbc 100%
+  );
+  border-color: white;
 }
 
 #searchButton:focus {
-  border-color: green;
+  background-image: linear-gradient(
+    to right,
+    #e09590 0%,
+    #f7bb97 51%,
+    #fccbbc 100%
+  );
+  border-color: white;
+  outline-style: none;
 }
 
 .filter-btn {
@@ -64,14 +88,24 @@ body {
 }
 
 .filter-btn:hover {
-  background-color: black;
-  color: white;
-  border-color: red;
+  background-image: linear-gradient(
+    to right,
+    #e09590 0%,
+    #f7bb97 51%,
+    #fccbbc 100%
+  );
+  border-color: white;
 }
 
 .filter-btn:focus {
-  background-color: black;
-  border-color: red;
+  background-image: linear-gradient(
+    to right,
+    #e09590 0%,
+    #f7bb97 51%,
+    #fccbbc 100%
+  );
+  border-color: white;
+  outline-style: none;
 }
 
 .type-btn {
@@ -84,14 +118,24 @@ body {
 }
 
 .type-btn:hover {
-  background-color: black;
-  color: white;
-  border-color: blue;
+  background-image: linear-gradient(
+    to right,
+    #fccbbc 0%,
+    #f7bb97 51%,
+    #cf6861 100%
+  );
+  border-color: white;
 }
 
 .type-btn:focus {
-  background-color: black;
-  border-color: blue;
+  background-image: linear-gradient(
+    to right,
+    #fccbbc 0%,
+    #f7bb97 51%,
+    #cf6861 100%
+  );
+  border-color: white;
+  outline-style: none;
 }
 
 /* Results List Styles */
@@ -102,8 +146,8 @@ body {
 }
 
 .results-image {
-  height: 100px;
-  width: 100px;
+  height: 200px;
+  width: 200px;
   float: left;
   margin-right: 25px;
 }
@@ -134,7 +178,8 @@ body {
   color: white;
   background-color: black;
   padding: 20px;
-  border: 10px solid red;
+  border: 5px solid white;
+  outline-style: none;
 }
 
 #detail-name {
